Opened 14 years ago

Closed 14 years ago

#6999 closed bug (fixed)

[app_server] it shouldn't be possible to resize Desktop and Deskbar

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: Applications Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #7036
Platform: All

Description

This is hrev39880 gcc4hybrid.

Attachments (1)

deskbar.png (10.2 KB ) - added by diver 14 years ago.

Download all attachments as: .zip

Change History (4)

by diver, 14 years ago

Attachment: deskbar.png added

comment:1 by anevilyak, 14 years ago

Blocking: 7036 added

comment:2 by diver, 14 years ago

Summary: [app_server] it shouldn't be possible o resize Desktop and Deskbar[app_server] it shouldn't be possible to resize Desktop and Deskbar

comment:3 by bonefish, 14 years ago

Component: Servers/app_serverApplications
Resolution: fixed
Status: newclosed

Fixed in hrev40059.

Note: See TracTickets for help on using tickets.