Set B_NOT_RESIZABLE for the deskbar and the desktop window. Fixes #6999.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@40059 a95241bf-73f2-0310-859d-f6bbb57e9c96